--- a/vignettes/RDML.bib
+++ b/vignettes/RDML.bib
@@ -15,7 +15,7 @@
   ISSN                     = {1367-4803, 1460-2059},
   Language                 = {en},
   Pmid                     = {11238067},
-  Url                      = {http://bioinformatics.oxfordjournals.org/content/17/2/115}
+  Url                      = {https://bioinformatics.oxfordjournals.org/content/17/2/115}
 }
 
 @Article{Baaaath_2012,
@@ -29,7 +29,7 @@
   Pages                    = { 74--75 },
   Volume                   = { 4 },
 
-  Url                      = { http://journal.r-project.org/archive/2012-2/RJournal_2012-2_Baaaath.pdf }
+  Url                      = { https://journal.r-project.org/archive/2012-2/RJournal_2012-2_Baaaath.pdf }
 }
 
 @Article{baker_quantitative_2012,
@@ -70,7 +70,7 @@ Summary: Following these guidelines will encourage better experimental practice,
   Pmid                     = {19246619},
   Shortjournal             = {Clinical Chemistry},
   Shorttitle               = {The {MIQE} Guidelines},
-  Url                      = {http://www.clinchem.org/content/55/4/611},
+  Url                      = {http://clinchem.aaccjnls.org/content/55/4/611},
   Urldate                  = {2014-09-11}
 }
 
@@ -80,7 +80,7 @@ Summary: Following these guidelines will encourage better experimental practice,
   Note                     = {R package version 2.1.0},
   Year                     = {2015},
 
-  Url                      = {http://CRAN.R-project.org/package=R6}
+  Url                      = {https://CRAN.R-project.org/package=R6}
 }
 
 @Manual{dragulescu_xlsx_2014,
@@ -91,7 +91,7 @@ Summary: Following these guidelines will encourage better experimental practice,
   Abstract                 = {Provide R functions to read/write/format Excel 2007 and Excel 97/2000/XP/2003 file formats.},
   Copyright                = {GPL-3},
   Shorttitle               = {xlsx},
-  Url                      = {https://cran.r-project.org/web/packages/xlsx/index.html},
+  Url                      = {https://CRAN.R-project.org/package=xlsx},
   Urldate                  = {2015-08-13}
 }
 
@@ -101,7 +101,7 @@ Summary: Following these guidelines will encourage better experimental practice,
   Journal                  = {R package version 2.10.0},
   Year                     = {2015},
 
-  Url                      = {http://www.bioconductor.org/packages/release/bioc/html/rhdf5.html}
+  Url                      = {https://www.bioconductor.org/packages/release/bioc/html/rhdf5.html}
 }
 
 @Article{gentleman_2004,
@@ -173,7 +173,7 @@ Software},
   ISSN                     = {1465-6906},
   Pmcid                    = {PMC1852402},
   Pmid                     = {17291332},
-  Url                      = {http://www.ncbi.nlm.nih.gov/pmc/articles/PMC1852402/},
+  Url                      = {https://www.ncbi.nlm.nih.gov/pmc/articles/PMC1852402/},
   Urldate                  = {2014-09-11}
 }
 
@@ -195,7 +195,7 @@ and sometimes models show whether information from graphics has statistical
 support or not. It is the interplay of the two approaches that is valuable. 
 Graphics could be used a lot more in R examples and we explore this idea with 
 some datasets available in R packages.},
-  Url                      = { http://journal.r-project.org/archive/2013-1/RJournal_2013-1_hofmann-unwin-cook.pdf}
+  Url                      = { https://journal.r-project.org/archive/2013-1/hofmann-unwin-cook.pdf}
 }
 
 @Article{huggett_2013,
@@ -253,14 +253,14 @@ Reaction},
 
   Abstract                 = {Motivation: Recent progress in live-cell imaging and modeling techniques has resulted in generation of a large amount of quantitative data (from experimental measurements and computer simulations) on spatiotemporal dynamics of biological objects such as molecules, cells and organisms. Although many research groups have independently dedicated their efforts to developing software tools for visualizing and analyzing these data, these tools are often not compatible with each other because of different data formats.
 Results: We developed an open unified format, Biological Dynamics Markup Language (BDML; current version: 0.2), which provides a basic framework for representing quantitative biological dynamics data for objects ranging from molecules to cells to organisms. BDML is based on Extensible Markup Language (XML). Its advantages are machine and human readability and extensibility. BDML will improve the efficiency of development and evaluation of software tools for data visualization and analysis.
-Availability and implementation: A specification and a schema file for BDML are freely available online at http://ssbd.qbic.riken.jp/bdml/.
+Availability and implementation: A specification and a schema file for BDML are freely available online at https://ssbd.qbic.riken.jp/bdml/.
 Contact: sonami@riken.jp
 Supplementary Information: Supplementary data are available at Bioinformatics online.},
   Doi                      = {10.1093/bioinformatics/btu767},
   ISSN                     = {1367-4803, 1460-2059},
   Pmid                     = {25414366},
   Shorttitle               = {Biological {Dynamics} {Markup} {Language} ({BDML})},
-  Url                      = {http://bioinformatics.oxfordjournals.org/content/31/7/1044}
+  Url                      = {https://bioinformatics.oxfordjournals.org/content/31/7/1044}
 }
 
 @Manual{Lang_XML,
@@ -269,7 +269,7 @@ Supplementary Information: Supplementary data are available at Bioinformatics on
   Note                     = {R package version 3.98-1.3},
   Year                     = {2015},
 
-  Url                      = {http://CRAN.R-project.org/package=XML}
+  Url                      = {https://CRAN.R-project.org/package=XML}
 }
 
 @Article{Leeper_2014,
@@ -281,7 +281,7 @@ Supplementary Information: Supplementary data are available at Bioinformatics on
   Pages                    = { 151--158 },
   Volume                   = { 6 },
 
-  Url                      = { http://journal.r-project.org/archive/2014-1/leeper.pdf}
+  Url                      = { https://journal.r-project.org/archive/2014-1/leeper.pdf}
 }
 
 @Article{lefever_rdml_2009,
@@ -293,16 +293,15 @@ Supplementary Information: Supplementary data are available at Bioinformatics on
   Pages                    = {2065--2069},
   Volume                   = {37},
 
-  Abstract                 = {The {XML}-based Real-Time {PCR} Data Markup Language ({RDML}) has been developed by the {RDML} consortium (http://www.rdml.org) to enable straightforward exchange of {qPCR} data and related information between {qPCR} instruments and third party data analysis software, between colleagues and collaborators and between experimenters and journals or public repositories. We here also propose data related guidelines as a subset of the Minimum Information for Publication of Quantitative Real-Time {PCR} Experiments ({MIQE}) to guarantee inclusion of key data information when reporting experimental results.},
+  Abstract                 = {The {XML}-based Real-Time {PCR} Data Markup Language ({RDML}) has been developed by the {RDML} consortium (https://www.rdml.org) to enable straightforward exchange of {qPCR} data and related information between {qPCR} instruments and third party data analysis software, between colleagues and collaborators and between experimenters and journals or public repositories. We here also propose data related guidelines as a subset of the Minimum Information for Publication of Quantitative Real-Time {PCR} Experiments ({MIQE}) to guarantee inclusion of key data information when reporting experimental results.},
   Date                     = {2009-01-04},
-  Doi                      = {10.1093/nar/gkp056},
   ISSN                     = {0305-1048, 1362-4962},
   Journaltitle             = {Nucleic Acids Research},
   Langid                   = {english},
   Pmid                     = {19223324},
   Shortjournal             = {Nucl. Acids Res.},
   Shorttitle               = {{RDML}},
-  Url                      = {http://nar.oxfordjournals.org/content/37/7/2065},
+  Url                      = {https://nar.oxfordjournals.org/content/37/7/2065},
   Urldate                  = {2014-09-11}
 }
 
@@ -328,10 +327,10 @@ Supplementary Information: Supplementary data are available at Bioinformatics on
   Publisher                = {Springer},
   Year                     = {2014},
 
-  Abstract                 = {Web technologies are increasingly relevant to scientists working with data, for both accessing data and creating rich dynamic and interactive displays.  The XML and JSON data formats are widely used in Web services, regular Web ...},
+  Abstract                 = {Web technologies are increasingly relevant to scientists working with data, for both accessing data and creating rich dynamic and interactive displays.  The XML and JSON data formats are widely used in Web services, regular Web ...},
   ISBN                     = {978-1-4614-7900-0},
   Keywords                 = {Compilers, Interpreters, Programming Languages, Statistics and Computing / Statistics Programs, XML and Web Technologies for Data Sciences with R},
-  Url                      = {http://www.springer.com/statistics/computational+statistics/book/978-1-4614-7899-7}
+  Url                      = {https://www.springer.com/statistics/computational+statistics/book/978-1-4614-7899-7}
 }
 
 @Manual{Mersmann_2014_microbenchmark,
@@ -340,7 +339,7 @@ Supplementary Information: Supplementary data are available at Bioinformatics on
   Note                     = {R package version 1.4-2},
   Year                     = {2014},
 
-  Url                      = {http://CRAN.R-project.org/package=microbenchmark}
+  Url                      = {https://CRAN.R-project.org/package=microbenchmark}
 }
 
 @Article{pabinger_2014,
@@ -357,11 +356,8 @@ Supplementary Information: Supplementary data are available at Bioinformatics on
 Here, we surveyed 27 open-access software packages and tools for the analysis of qPCR data. The survey includes 8 Microsoft Windows, 5 web-based, 9 R-based and 5 tools from other platforms. Reviewed packages and tools support the analysis of different qPCR applications, such as RNA quantification, DNA methylation, genotyping, identification of copy number variations, and digital PCR. We report an overview of the functionality, features and specific requirements of the individual software tools, such as data exchange formats, availability of a graphical user interface, included procedures for graphical data presentation, and offered statistical methods. In addition, we provide an overview about quantification strategies, and report various applications of qPCR.
 
 Our comprehensive survey showed that most tools use their own file format and only a fraction of the currently existing tools support the standardized data exchange format RDML. To allow a more streamlined and comparable analysis of qPCR data, more vendors and tools need to adapt the standardized format to encourage the exchange of data between instrument software, analysis tools, and researchers.},
-  Doi                      = {10.1016/j.bdq.2014.08.002},
   ISSN                     = {2214-7535},
-  Keywords                 = {Data analysis, MIQE, qPCR, RDML, Software, Tools},
-  Url                      = {http://www.sciencedirect.com/science/article/pii/S2214753514000059},
-  Urldate                  = {2015-04-02}
+  Keywords                 = {Data analysis, MIQE, qPCR, RDML, Software, Tools}
 }
 
 @Manual{RDCT2010c,
@@ -373,7 +369,7 @@ Our comprehensive survey showed that most tools use their own file format and on
   Organization             = {{R} Foundation for Statistical Computing},
   Year                     = {2012},
 
-  Url                      = {http://www.R-project.org/}
+  Url                      = {https://www.R-project.org/}
 }
 
 @Article{roediger2015r,
@@ -395,10 +391,9 @@ Our comprehensive survey showed that most tools use their own file format and on
   Pages                    = {2900-2902},
   Volume                   = {31},
 
-  Abstract                 = {Motivation: Both the quantitative real-time polymerase chain reaction (qPCR) and quantitative isothermal amplification (qIA) are standard methods for nucleic acid quantification. Numerous real-time read-out technologies have been developed. Despite the continuous interest in amplification-based techniques, there are only few tools for pre-processing of amplification data. However, a transparent tool for precise control of raw data is indispensable in several scenarios, for example, during the development of new instruments.Results: chipPCR is an R package for the pre-processing and quality analysis of raw data of amplification curves. The package takes advantage of R’s S4 object model and offers an extensible environment. chipPCR contains tools for raw data exploration: normalization, baselining, imputation of missing values, a powerful wrapper for amplification curve smoothing and a function to detect the start and end of an amplification curve. The capabilities of the software are enhanced by the implementation of algorithms unavailable in R, such as a 5-point stencil for derivative interpolation. Simulation tools, statistical tests, plots for data quality management, amplification efficiency/quantification cycle calculation, and datasets from qPCR and qIA experiments are part of the package. Core functionalities are integrated in GUIs (web-based and standalone shiny applications), thus streamlining analysis and report generation.Availability and implementation: http://cran.r-project.org/web/packages/chipPCR. Source code: https://github.com/michbur/chipPCR.Contact: stefan.roediger@b-tu.deSupplementary information: Supplementary data are available at Bioinformatics online.},
-  Doi                      = {10.1093/bioinformatics/btv205},
-  Eprint                   = {http://bioinformatics.oxfordjournals.org/content/31/17/2900.full.pdf+html},
-  Url                      = {http://bioinformatics.oxfordjournals.org/content/31/17/2900.abstract}
+  Abstract                 = {Motivation: Both the quantitative real-time polymerase chain reaction (qPCR) and quantitative isothermal amplification (qIA) are standard methods for nucleic acid quantification. Numerous real-time read-out technologies have been developed. Despite the continuous interest in amplification-based techniques, there are only few tools for pre-processing of amplification data. However, a transparent tool for precise control of raw data is indispensable in several scenarios, for example, during the development of new instruments.Results: chipPCR is an R package for the pre-processing and quality analysis of raw data of amplification curves. The package takes advantage of R’s S4 object model and offers an extensible environment. chipPCR contains tools for raw data exploration: normalization, baselining, imputation of missing values, a powerful wrapper for amplification curve smoothing and a function to detect the start and end of an amplification curve. The capabilities of the software are enhanced by the implementation of algorithms unavailable in R, such as a 5-point stencil for derivative interpolation. Simulation tools, statistical tests, plots for data quality management, amplification efficiency/quantification cycle calculation, and datasets from qPCR and qIA experiments are part of the package. Core functionalities are integrated in GUIs (web-based and standalone shiny applications), thus streamlining analysis and report generation.Availability and implementation: https://cran.r-project.org/web/packages/chipPCR. Source code: https://github.com/michbur/chipPCR.Contact: stefan.roediger@b-tu.deSupplementary information: Supplementary data are available at Bioinformatics online.},
+  Eprint                   = {https://bioinformatics.oxfordjournals.org/content/31/17/2900.full.pdf+html},
+  Url                      = {https://bioinformatics.oxfordjournals.org/content/31/17/2900.abstract}
 }
 
 @Article{roediger_rkward_2012,
@@ -411,7 +406,7 @@ Our comprehensive survey showed that most tools use their own file format and on
   Volume                   = {49},
 
   ISSN                     = {1548-7660},
-  Url                      = {http://www.jstatsoft.org/v49/i09}
+  Url                      = {https://www.jstatsoft.org/article/view/v049i09}
 }
 
 @Article{roediger_highly_2013,
@@ -439,16 +434,16 @@ Our comprehensive survey showed that most tools use their own file format and on
   Volume                   = { 5 },
 
   Url                      = { 
-http://journal.r-project.org/archive/2013-2/roediger-bohm-schimke.pdf }
+https://journal.r-project.org/archive/2013-2/roediger-bohm-schimke.pdf }
 }
 
 @Manual{Radford_2014_microbenchmark,
   Title                    = {Inaccurate results from microbenchmark},
   Author                   = {Neal Radford},
-  Note                     = {https://web.archive.org/web/20140823221902/http://www.r-bloggers.com/inaccurate-results-from-microbenchmark/},
+  Note                     = {https://web.archive.org/web/20140823221902/https://www.r-bloggers.com/inaccurate-results-from-microbenchmark/},
   Year                     = {2014},
 
-  Url                      = {https://web.archive.org/web/20140823221902/http://www.r-bloggers.com/inaccurate-results-from-microbenchmark/}
+  Url                      = {https://web.archive.org/web/20140823221902/https://www.r-bloggers.com/inaccurate-results-from-microbenchmark/}
 }
 
 @Article{reed_high-resolution_2007,
@@ -474,7 +469,7 @@ http://journal.r-project.org/archive/2013-2/roediger-bohm-schimke.pdf }
   Note                     = {R package version 0.4.2.3},
   Year                     = {2015},
 
-  Url                      = {http://CRAN.R-project.org/package=rlist}
+  Url                      = {https://CRAN.R-project.org/package=rlist}
 }
 
 @Manual{ripley_rodbc_2015,
@@ -485,7 +480,7 @@ http://journal.r-project.org/archive/2013-2/roediger-bohm-schimke.pdf }
   Abstract                 = {An ODBC database interface.},
   Copyright                = {GPL-2 {\textbar} GPL-3},
   Shorttitle               = {{RODBC}},
-  Url                      = {https://cran.r-project.org/web/packages/RODBC/index.html},
+  Url                      = {https://CRAN.R-project.org/package=RODBC},
   Urldate                  = {2015-08-13}
 }
 
@@ -510,7 +505,7 @@ Supplementary Information: Statistical evaluations of the implemented methods ca
   Pmid                     = {18482995},
   Shortjournal             = {Bioinformatics},
   Shorttitle               = {{qpcR}},
-  Url                      = {http://bioinformatics.oxfordjournals.org/content/24/13/1549},
+  Url                      = {https://bioinformatics.oxfordjournals.org/content/24/13/1549},
   Urldate                  = {2014-09-11}
 }
 
@@ -570,7 +565,7 @@ Materials, {DNA-binding} dyes, Hybridization probes, Hydrolysis probes,
 Microengineering, Monitoring chemistry, Nanochemistry, Nanotechnology, {PCR} 
 efficiency, Quantitative {PCR}},
   Language                 = {en},
-  Url                      = {http://link.springer.com/article/10.1007/s00604-013-1155-8},
+  Url                      = {https://link.springer.com/article/10.1007/s00604-013-1155-8},
   Urldate                  = {2014-04-08}
 }
 
@@ -584,7 +579,6 @@ efficiency, Quantitative {PCR}},
   Volume                   = {37},
 
   Abstract                 = {Despite the central role of quantitative PCR (qPCR) in the quantification of mRNA transcripts, most analyses of qPCR data are still delegated to the software that comes with the qPCR apparatus. This is especially true for the handling of the fluorescence baseline. This article shows that baseline estimation errors are directly reflected in the observed PCR efficiency values and are thus propagated exponentially in the estimated starting concentrations as well as 'fold-difference' results. Because of the unknown origin and kinetics of the baseline fluorescence, the fluorescence values monitored in the initial cycles of the PCR reaction cannot be used to estimate a useful baseline value. An algorithm that estimates the baseline by reconstructing the log-linear phase downward from the early plateau phase of the PCR reaction was developed and shown to lead to very reproducible PCR efficiency values. PCR efficiency values were determined per sample by fitting a regression line to a subset of data points in the log-linear phase. The variability, as well as the bias, in qPCR results was significantly reduced when the mean of these PCR efficiencies per amplicon was used in the calculation of an estimate of the starting concentration per sample.},
-  Doi                      = {10.1093/nar/gkp045},
   ISSN                     = {1362-4962},
   Keywords                 = {Algorithms, Animals, Chick Embryo, Fluorescence, Linear Models, Reverse Transcriptase Polymerase Chain Reaction},
   Language                 = {eng},
@@ -599,7 +593,7 @@ efficiency, Quantitative {PCR}},
   Note                     = {R package version 1.4},
   Year                     = {2014},
 
-  Url                      = {http://CRAN.R-project.org/package=readODS}
+  Url                      = {https://CRAN.R-project.org/package=readODS}
 }
 
 @Article{sheikh_2015,
@@ -612,11 +606,8 @@ efficiency, Quantitative {PCR}},
   Volume                   = {569},
 
   Abstract                 = {Myosin light chain-2 (MYL2, also called MLC-2) is an {\textasciitilde} 19 kDa sarcomeric protein that belongs to the EF-hand calcium binding protein superfamily and exists as three major isoforms encoded by three distinct genes in mammalian striated muscle. Each of the three different MLC-2 genes (MLC-2f; fast twitch skeletal isoform, MLC-2v; cardiac ventricular and slow twitch skeletal isoform, MLC-2a; cardiac atrial isoform) has a distinct developmental expression pattern in mammals. Genetic loss-of-function studies in mice demonstrated an essential role for cardiac isoforms of MLC-2, MLC-2v and MLC-2a, in cardiac contractile function during early embryogenesis. In the adult heart, MLC-2v function is regulated by phosphorylation, which displays a specific 1`expression pattern (high in epicardium and low in endocardium) across the heart. These data along with new data from computational models, genetic mouse models, and human studies have revealed a direct role for MLC-2v phosphorylation in cross-bridge cycling kinetics, calcium-dependent cardiac muscle contraction, cardiac torsion, cardiac function and various cardiac diseases. This review focuses on the regulatory functions of MLC-2 in the embryonic and adult heart, with an emphasis on phosphorylation-driven actions of MLC-2v in adult cardiac muscle, which provide new insights into mechanisms regulating myosin cycling kinetics and human cardiac diseases.},
-  Doi                      = {10.1016/j.gene.2015.06.027},
   ISSN                     = {0378-1119},
-  Keywords                 = {Cardiac disease, Cardiac function, Cardiac muscle, Cardiac torsion, Contraction, Heart, Myosin light chain-2 (MYL2/MLC-2), Myosin light chain kinase, Phosphorylation, Sarcomere, Ventricular myosin light chain-2},
-  Url                      = {http://www.sciencedirect.com/science/article/pii/S0378111915007350},
-  Urldate                  = {2015-08-13}
+  Keywords                 = {Cardiac disease, Cardiac function, Cardiac muscle, Cardiac torsion, Contraction, Heart, Myosin light chain-2 (MYL2/MLC-2), Myosin light chain kinase, Phosphorylation, Sarcomere, Ventricular myosin light chain-2}
 }
 
 @Article{spiess_impact_2014,
@@ -648,12 +639,12 @@ Conclusions: The selection of a smoothing algorithm is an important step in deve
   Pages                    = {W71--W74},
   Volume                   = {35},
 
-  Abstract                 = {Here we present {Primer3Plus}, a new web interface to the popular Primer3 primer design program as an enhanced alternative for the {CGI}- scripts that come with Primer3. Primer3 consists of a command line program and a web interface. The web interface is one large form showing all of the possible options. This makes the interface powerful, but at the same time confusing for occasional users. Primer3Plus provides an intuitive user interface using present-day web technologies and has been developed in close collaboration with molecular biologists and technicians regularly designing primers. It focuses on the task at hand, and hides detailed settings from the user until these are needed. We also added functionality to automate specific tasks like designing primers for cloning or step-wise sequencing. Settings and designed primer sequences can be stored locally for later use. Primer3Plus supports a range of common sequence formats, such as {FASTA}. Finally, primers selected by Primer3Plus can be sent to an order form, allowing tight integration into laboratory ordering systems. Moreover, the open architecture of Primer3Plus allows easy expansion or integration of external software packages. The Primer3Plus Perl source code is available under {GPL} license from {SourceForge}. Primer3Plus is available at http://www.bioinformatics.nl/primer3plus.},
+  Abstract                 = {Here we present {Primer3Plus}, a new web interface to the popular Primer3 primer design program as an enhanced alternative for the {CGI}- scripts that come with Primer3. Primer3 consists of a command line program and a web interface. The web interface is one large form showing all of the possible options. This makes the interface powerful, but at the same time confusing for occasional users. Primer3Plus provides an intuitive user interface using present-day web technologies and has been developed in close collaboration with molecular biologists and technicians regularly designing primers. It focuses on the task at hand, and hides detailed settings from the user until these are needed. We also added functionality to automate specific tasks like designing primers for cloning or step-wise sequencing. Settings and designed primer sequences can be stored locally for later use. Primer3Plus supports a range of common sequence formats, such as {FASTA}. Finally, primers selected by Primer3Plus can be sent to an order form, allowing tight integration into laboratory ordering systems. Moreover, the open architecture of Primer3Plus allows easy expansion or integration of external software packages. The Primer3Plus Perl source code is available under {GPL} license from {SourceForge}. Primer3Plus is available at https://www.bioinformatics.nl/primer3plus.},
   Doi                      = {10.1093/nar/gkm306},
   ISSN                     = {0305-1048, 1362-4962},
   Language                 = {en},
   Pmid                     = {17485472},
-  Url                      = {http://nar.oxfordjournals.org/content/35/suppl_2/W71},
+  Url                      = {https://nar.oxfordjournals.org/content/35/suppl_2/W71},
   Urldate                  = {2014-09-11}
 }
 
@@ -672,7 +663,7 @@ Conclusions: The selection of a smoothing algorithm is an important step in deve
   Day                      = {30},
   ISSN                     = {1548-7660},
   Submitted                = {2012-06-03},
-  Url                      = {http://www.jstatsoft.org/v49/i01}
+  Url                      = {https://www.jstatsoft.org/article/view/v049i01}
 }
 
 @Manual{Warnes_2015_gdata,
@@ -681,7 +672,7 @@ Conclusions: The selection of a smoothing algorithm is an important step in deve
   Note                     = {R package version 2.17.0},
   Year                     = {2015},
 
-  Url                      = {http://CRAN.R-project.org/package=gdata}
+  Url                      = {https://CRAN.R-project.org/package=gdata}
 }
 
 @Manual{Wickham_tidyr,
@@ -690,7 +681,7 @@ Conclusions: The selection of a smoothing algorithm is an important step in deve
   Note                     = {R package version 0.2.0},
   Year                     = {2014},
 
-  Url                      = {http://CRAN.R-project.org/package=tidyr}
+  Url                      = {https://CRAN.R-project.org/package=tidyr}
 }
 
 @Manual{Wickham_assertthat,
@@ -699,7 +690,7 @@ Conclusions: The selection of a smoothing algorithm is an important step in deve
   Note                     = {R package version 0.1},
   Year                     = {2013},
 
-  Url                      = {http://CRAN.R-project.org/package=assertthat}
+  Url                      = {https://CRAN.R-project.org/package=assertthat}
 }
 
 @Article{Wickham_plyr,
@@ -711,7 +702,7 @@ Conclusions: The selection of a smoothing algorithm is an important step in deve
   Pages                    = {1--29},
   Volume                   = {40},
 
-  Url                      = {http://www.jstatsoft.org/v40/i01/}
+  Url                      = {https://www.jstatsoft.org/article/view/v040i01}
 }
 
 @Manual{Wickham_Francois_dplyr,
@@ -720,7 +711,7 @@ Conclusions: The selection of a smoothing algorithm is an important step in deve
   Note                     = {R package version 0.4.2},
   Year                     = {2015},
 
-  Url                      = {http://CRAN.R-project.org/package=dplyr}
+  Url                      = {https://CRAN.R-project.org/package=dplyr}
 }
 
 @Article{wittwer_high-resolution_2009,
@@ -740,7 +731,7 @@ Conclusions: The selection of a smoothing algorithm is an important step in deve
   Rights                   = {© 2009 Wiley-Liss, Inc.},
   Shortjournal             = {Hum. Mutat.},
   Shorttitle               = {High-resolution {DNA} melting analysis},
-  Url                      = {http://onlinelibrary.wiley.com/doi/10.1002/humu.20951/abstract},
+  Url                      = {https://onlinelibrary.wiley.com/doi/10.1002/humu.20951/abstract},
   Urldate                  = {2014-09-11}
 }
 
