--- a/vignettes/RDML.Rmd
+++ b/vignettes/RDML.Rmd
@@ -31,7 +31,7 @@ The RDML format is supported by Bio-Rad (CFX 96 and CFX 384), Life Technologies 
 
 # Structure of the **RDML** package
 
-The structure of the **RDML** package mimics the RDML format and provides several [R6](https://cran.r-project.org/web/packages/R6/vignettes/Introduction.html) classes, which corresponds to [RDML v1.2](http://rdml.org/files.php?v=1.2) format types. All major manipulations with RDML data can be done by a class called **RDML** through its public methods:
+The structure of the **RDML** package mimics the RDML format and provides several [R6](https://CRAN.R-project.org/package=R6/vignettes/Introduction.html) classes, which corresponds to [RDML v1.2](http://rdml.org/files.php?v=1.2) format types. All major manipulations with RDML data can be done by a class called **RDML** through its public methods:
 
 - `$new()` -- creates new **RDML** object (empty or from specified RDML file) 
 - `$AsTable()` -- represents data contained in **RDML** object (except fluorescent data) as data.frame.
